feat: add update status
